# django-crud

./: pyproject.toml
snacks_crud_project/: README.md  db.sqlite3
snacks_crud_project/snacks/: admin.py  urls.py  views.py
snacks_crud_project/snacks/migrations/: 0001_initial.py
snacks_crud_project/snacks_crud_project/: settings.py  urls.py
snacks_crud_project/templates/: base.html  snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
